--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
         "autoprefixer": "^10.4.2",
         "install": "^0.13.0",
         "laravel-vite-plugin": "^0.5.0",
-        "npm": "^8.18.0",
+        "npm": "^10.2.1",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.2.0",
         "tippy.js": "^6.3.7",
-        "vite": "^3.0.0"
+        "vite": "^3.2.7"
+    },
+    "dependencies": {
+        "@tiptap/pm": "^2.1.12"
     }
 }
